--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>Treinamento de uso vscode</title>
 </head>
 <body>
-    
+   <header>
+<h1>Treinamento de uso vscode</h1>
+<p>Aprendendo para ensinar</p>
+   </header>
+
+   <section>
+<h2>HTML</h2>
+<p>Hyper Tex Makup Languange(Linguagem de marcação de Hiper Texto)</p>
+
+<h2>CSS</h2>
+<p>Cascating Stile Sheets(Folha de Estilo em Casca) estiliza a sua página web</p>
+
+   </section>
+
+   <footer>
+Alura guiou-me nesta criação
+
+   </footer>
 </body>
 </html>
