--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 
    <section>
 <h2>HTML</h2>
-<p>Hyper Tex Makup Languange(Linguagem de marcação de Hiper Texto)</p>
+<p>Hyper Text Makup Languange(Linguagem de marcação de Hiper Texto)</p>
 
 <h2>CSS</h2>
-<p>Cascating Stile Sheets(Folha de Estilo em Casca) estiliza a sua página web</p>
+ <p>Cascading Style Sheets(Folha em Estilo de Cascata) cria estilos padronizados na sua página web.</p>
+ <img src="imagem/Imagem para o treinamento do vscode.png" 
 
    </section>
 
    <footer>
-Alura guiou-me nesta criação
+<p>Alura me guiou até aqui</p>
 
    </footer>
 </body>
