--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="ptbr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Treinamento de uso vscode</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Treinamento de uso vscode</title>
+   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
    <header>
-<h1>Treinamento de uso vscode</h1>
-<p>Aprendendo para ensinar</p>
+      <h1>Treinamento de uso vscode</h1>
+      <p>Aprendendo para <span>ensinar</span id="nome-usuário"></p>
    </header>
 
    <section>
-<h2>HTML</h2>
-<p>Hyper Text Makup Languange(Linguagem de marcação de Hiper Texto)</p>
-
-<h2>CSS</h2>
- <p>Cascading Style Sheets(Folha em Estilo de Cascata) cria estilos padronizados na sua página web.</p>
- <img src="imagem/Imagem para o treinamento do vscode.png" 
+      <h2>HTML</h2>
+      <p><span class="texto-inglês">Hyper Text Makup Languange</span>(Linguagem de marcação de Hiper Texto)</p>
+      <h2>CSS</h2>
+      <p><span class="texto-inglês">Cascading Style Sheets</span>(Folha em Estilo de Cascata) cria estilos padronizados na sua página web.</p>
+      <img src="imagem/Imagem para o treinamento do vscode.png"
+         alt="Imagem de duas mãos com os dedos entrelaçados simbolizando a união de duas partes">
 
    </section>
 
    <footer>
-<p>Alura me guiou até aqui</p>
+      <p>Criado pelo professor Samir</p>
 
    </footer>
 </body>
+
 </html>
